book request validated

--- a/src/main/resources/messages/validation/ValidationMessages.properties
+++ b/src/main/resources/messages/validation/ValidationMessages.properties
@@ -10,3 +10,4 @@ login_password_not_empty=Password can not be null!
 # BOOK VALIDATION
 book_title_not_empty=Title can not be null!
 book_author_not_empty=Author can not be null!
+book_stock_not_empty=Stock can not be null!
